# datafusion-sqlgen

./: .gitmodules  Cargo.toml  README.md
datafusion-sqlgen/: Cargo.toml
datafusion-sqlgen/src/: expr.rs  lib.rs  logical_plan.rs
datafusion-sqlgen/tests/: select.rs
sqlgenerator/: Cargo.toml
sqlgenerator/src/: expr.rs  lib.rs
